# code-point-names

./: .clang-format  .gitignore  BUILD_NOTES.md  CMakeLists.txt  README.md  names.hpp  namesgen.cpp  test.cpp  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: clang-format.yml  cmake.yml  copilot-setup-steps.yml
cmake/: splice.cmake  vcpkg.cmake
include/: get_code_point_name.hpp
src/: name_to_cp.hpp  names.hpp
src/cedilla/: base.h  synopsys.h  unicode.h
tests/: CMakeLists.txt  common.cpp  common.h  tst_names.cpp
tools/: amalgamate.py  gen.py  make_ucd_subset.py  names.cpp  namesreverse.cpp
